bugfix: scrolling into overflow for header overlay

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -79,6 +79,10 @@ fast-badge {
   }
 }
 
+#r159-home-banner-overlay-wrapper {
+  overflow: hidden;
+}
+
 #r159-home-banner-overlay {
   margin: v.$base-px-unit * -4;
   border: v.$base-px-unit * 4 solid var(--neutral-layer-2);
